--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -17,14 +17,14 @@ jobs:
         working-directory: ./my-agora-states-client
       - name: SHOW AWS CLI VERSION
         run: |
-          <?>
+          aws --version
       - name: Sync Bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws s3 <?> \
+          aws s3 aws s3 sync \
             --region ap-northeast-2 \
             build s3://<?> \
             --delete
